# C-.Primer.Plus.6th.Edition.LearnNote

./: .gitignore  README.md  arrayone.cpp  ignore_elf.sh  sourcefile
app/release-info/: Makefile  main.cpp  release_info.cpp  release_info.h
ch-02 Setting Out to C++/2.1 Setting Out to C++/: myfirst.cpp
ch-02/2.1 Setting Out to C++/: note.note
ch-03 Dealing with Data/3.3 Floating-Point Numbers/: float_point.cpp  float_point_constants.cpp  floatnum.cpp  fltadd.cpp  note.note
ch-03 Dealing with Data/3.4 C++ Arithmetic Operators/: arith.cpp  divide.cpp  init.cpp  modulus.cpp  typecast.cpp
ch-03 Dealing with Data/Integer Type/: CMakeLists.txt  numeric_limits.cc
ch-03 Dealing with Data/exercises/: 1.cc  2.cc  3.cc  4.cc  5.cc  6.cc  7.cc  CMakeLists.txt
ch-04 Compound Types/4.02 Strings/: concatenating_string_iterals.c  concatenating_string_iterals.cpp  instr2.cpp  instr3.cpp  what_a_string.cpp
ch-04 Compound Types/4.03 Introducing the string Class/: list_initialization.cpp  string_cmp_array.cpp
ch-04 Compound Types/4.04 Introducing Structures/: bit_field.cpp  struct_array.cpp
ch-04 Compound Types/4.06 Enumerations/: enum_usage.cpp
ch-04 Compound Types/4.07 Pointers and the Free Store/: address_operator.cpp  new_dynamic_array.cpp  new_usage.cpp  pointer_danger.cpp  pointer_declare_init.cpp
ch-04 Compound Types/4.08 Pointers, Arrays, and Pointer Arithmetic/: new_delete.cpp  pointer_string.cpp
ch-06 Branching Statements and Logical Operators/exercises/: 01.cc  02.cc  03.cc  04.cc  05.cc  06.cc  07.cc  08.cc  09.cc  CMakeLists.txt
debug/zlog/: Makefile  (+2 more)
(+525 files in other folders)
