project(exercises)

set(CMAKE_CXX_FLAGS "-Wall -std=c++11 ${CMAKE_CXX_FLAGS}")

add_executable(01 01.cc)
add_executable(02 02.cc)
add_executable(03 03.cc)
add_executable(04 04.cc)
add_executable(05 05.cc)
add_executable(06 06.cc)
add_executable(07 07.cc)
add_executable(08 08.cc)
add_executable(09 09.cc)
